--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,13 @@
 @mixin seven{
-    @media (max-width: 1000px) { @content};
+    @media (max-width: 1100px) { @content};
 }
 
 @mixin res {
     @media (max-width: 800px) {@content};
+}
+
+@mixin real-seven {
+    @media(max-width: 700px) {@content};
 }
 
 @mixin five {
@@ -169,7 +173,7 @@ nav {
             margin-top: 0;
             display: flex;
             align-items:center;
-            max-height:100vh;
+            max-height:80vh;
             transition:0.25s ease-in-out;
 
             @include desktop {
@@ -182,7 +186,7 @@ nav {
     }
 
     @include five{
-        height:100vh;
+        height:80vh;
         max-height: 0;
         width: 100%;
         overflow: hidden;
@@ -196,7 +200,7 @@ nav {
             
             li{
                 @include five { 
-                    padding:65px 0;
+                    padding:50px 0;
                     text-align: center !important;    
                 }
                 
@@ -237,7 +241,8 @@ nav {
                     }
                     
                     @include five {
-                        font-size: 2rem;
+                        margin-left: 0;
+                        font-size: 1.7rem;
                         color: black;
                     }
 
@@ -258,10 +263,14 @@ nav {
     background: white;
 
     @include seven {
-        padding:  7rem 0rem 5rem 0;
+        padding:5em 0rem 3rem 0;
         flex-wrap: wrap;
         flex-direction: column;
         height:100%;
+    }
+
+    @include res {
+        padding: 8rem 0rem 5rem 0;
     }
 
     .front-cover {
@@ -273,18 +282,20 @@ nav {
        animation: img-hero 0.60s ease-in-out;
 
        @include desktop {
-           width: 85%;
-           height: 83%;
+           width: 90%;
+           height:90%;
        }
 
+
        @include thousand {
-        width: 70%;
-        padding: 1rem 0;
-        height: 70%;
+        width: 90%;
+        padding: 1rem;
+        height: 90%;
        }
 
         @include five {
-            height: 80%;
+            height:100%;
+            width: 100%;
         }
 
        @keyframes img-hero {
@@ -299,8 +310,10 @@ nav {
        
        
     @include seven {
-        height: 80%;
+        height:40%;
+        width:40%;
         order:1;
+        padding: 0;
         animation: none;
     }
     
@@ -354,8 +367,12 @@ nav {
         
     @include seven {
         order:2;
-        padding:1rem 2rem;
+        padding:1rem 2rem 1rem 2rem;
         animation: none;
+    }
+
+    @include res {
+        padding: 2rem 2rem 1rem 2rem;
     }
 
     
@@ -371,17 +388,21 @@ nav {
                 color: white;
                 border-radius: 4px;
                 font-size: 1rem;
-                margin: 0.8rem 0;
+                margin: 0.3rem 0;
                 cursor: pointer;
 
                 #abm:hover {
                     animation: colors 0.5s ease-in-out infinite;
                 }
 
+                @include res {
+                    margin-top: 1rem;
+                }
+
                 @include seven {
                     display: block;
                     max-width: 100%;
-                    margin-top: 1rem;
+                    margin-top: 0rem;
                     padding:0.8rem 0;
                  }
             }   
@@ -392,7 +413,7 @@ nav {
                 line-height: 65px;
                 font-weight:bold;
 
-                @include five {
+                @include res {
                     line-height: 35px;
                 }
 
