--- a/css/style.css
+++ b/css/style.css
@@ -77,14 +77,30 @@ nav .title {
 
 @media (max-width: 500px) {
   nav .title {
-    font-size: 1.7rem;
+    font-size: 2rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    font-weight: 500;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding: 1.7rem 0 0 0;
+    padding: 1.5rem 0 0 0;
+  }
+}
+
+nav .title .logo {
+  width: 30px;
+  -webkit-transform: rotate(10deg);
+          transform: rotate(10deg);
+  margin-left: 5px;
+}
+
+@media (max-width: 500px) {
+  nav .title .logo {
+    width: 50px;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
 }
 
@@ -142,6 +158,7 @@ nav.navs .nav-links li a:before {
 .p-bar {
   opacity: 0;
   position: absolute;
+  background: blue;
   top: -5px;
   right: 0px;
   border: none;
@@ -155,7 +172,7 @@ nav.navs .nav-links li a:before {
 }
 
 .p-bar .bars {
-  width: 2rem;
+  width: 2.1rem;
   opacity: 0;
   position: absolute;
   top: 1.8rem;
@@ -260,32 +277,8 @@ nav.navs .nav-links li a:before {
   position: relative;
 }
 
-.nav-links li a:hover:before {
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-}
-
-.nav-links li a:before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 3px;
-  background: black;
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-  -webkit-transform-origin: right;
-          transform-origin: right;
-  -webkit-transition: 0.25s ease-in-out;
-  transition: 0.25s ease-in-out;
-}
-
-@media (max-width: 500px) {
-  .nav-links li a:before {
-    background: white;
-    text-align: center !important;
-  }
+.nav-links li a:hover {
+  color: #0077ff;
 }
 
 @media (max-width: 500px) {
@@ -293,6 +286,7 @@ nav.navs .nav-links li a:before {
     margin-left: 0;
     font-size: 1.7rem;
     color: black;
+    font-weight: 400;
   }
 }
 
@@ -330,6 +324,12 @@ nav.navs .nav-links li a:before {
 @media (max-width: 800px) {
   .hero {
     padding: 8rem 0rem 5rem 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .hero {
+    padding: 10rem 0rem 5rem 0;
   }
 }
 
