--- a/css/style.scss
+++ b/css/style.scss
@@ -87,17 +87,16 @@ nav {
             display: flex;
             font-weight:500;
             align-items:center;
-            padding: 1.5rem 0 0 0;
+            padding: 1rem 0 0 0;
         }
 
         .logo {
             width: 30px;
-            transform: rotate(10deg);
+            transform: rotate(5deg);
             margin-left: 5px;
 
             @include five {
                 width: 50px;
-                transform: rotate(0deg);
             }
 
         }
@@ -122,7 +121,7 @@ nav {
         background:white;
         padding: 0rem 4rem;
         color: black;
-        box-shadow: 0 3px 11px rgba(0,0,0,0.3);
+        box-shadow: 0 0 20px 1px rgba(0,0,0,0.2);
         transition: 0.25s ease-in-out;
         
         @include seven {
@@ -147,8 +146,7 @@ nav {
  .p-bar{
     opacity: 0;
     position: absolute;
-    background: blue;
-    top: -5px;
+    top: 0px;
     right: 0px;
     border: none;
     outline: none;
@@ -160,7 +158,7 @@ nav {
         width: 2.1rem;
         opacity: 0;
         position: absolute;
-        top:1.8rem;
+        top:1.2rem;
         right: 30px;
         border: none;
         outline: none;
