--- a/css/style.css
+++ b/css/style.css
@@ -127,15 +127,22 @@ nav.navs {
   background: white;
   padding: 0rem 4rem;
   color: black;
-  -webkit-box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.2);
   -webkit-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
+  border-bottom: 2px solid #f0f0f0;
 }
 
 @media (max-width: 1100px) {
   nav.navs {
     padding: 0 2rem;
+  }
+}
+
+@media (max-width: 500px) {
+  nav.navs {
+    -webkit-box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.2);
+    border: none;
   }
 }
 
