--- a/css/style.scss
+++ b/css/style.scss
@@ -121,12 +121,18 @@ nav {
         background:white;
         padding: 0rem 4rem;
         color: black;
-        box-shadow: 0 0 20px 1px rgba(0,0,0,0.2);
         transition: 0.25s ease-in-out;
+        border-bottom: 2px solid rgb(240, 240, 240);
         
         @include seven {
             padding: 0 2rem;
         }
+        
+        @include five {
+            box-shadow: 0 0 15px 1px rgba(0,0,0,0.2);
+            border: none;
+        }
+
     }
     
     &.navs .title, &.navs .nav-links li a{
