--- a/css/style.css
+++ b/css/style.css
@@ -744,7 +744,13 @@ nav.navs .nav-links li a:before {
 
 @media (max-width: 800px) {
   .best .card .card-img-top {
-    height: 30rem;
+    height: 23rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .best .card .card-img-top {
+    height: 23rem;
   }
 }
 
